# mdformat-sentencebreak

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: CICD.yml
mdformat_sentencebreak/: __init__.py  plugin.py
tests/: test_fixtures.py
tests/fixtures/: ellipsis_sentences.md  emphasized_sentences.md  list_elements.md  list_elements_simple.md  list_long_elements.md  long_sentences.md  mixed_sentences.md  nested_lists.md
