[tool.poetry]
name = "mdformat-sentencebreak"
version = "0.2.0"
description = "Adds a really simple and naive sentence breaking scheme to mdformat"
authors = ["J. Sebastian Paez <jspaezp@users.noreply.github.com>"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mdformat", "markdown", "markdown-it"]
packages = [
    {include = "mdformat_sentencebreak"},
]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
mdformat = "^0.7.16"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
tox-poetry = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["mdformat_plugin", "tests"]

# Settings for Black compatibility
profile = "black"

[tool.poetry.plugins."mdformat.parser_extension"]
"sentencebreak" = "mdformat_sentencebreak:plugin"
